--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,14 +2,14 @@
    <parent>
       <artifactId>seam-persistence-parent</artifactId>
       <groupId>org.jboss.seam.persistence</groupId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.Beta1</version>
    </parent>
 
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jboss.seam.persistence</groupId>
    <artifactId>seam-persistence-api</artifactId>
    <packaging>jar</packaging>
-   <version>3.0.0-SNAPSHOT</version>
+   <version>3.0.0.Beta1</version>
    <name>Seam Persistence API</name>
 
    <prerequisites>
