--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -2,7 +2,7 @@
    <parent>
       <artifactId>seam-persistence-parent</artifactId>
       <groupId>org.jboss.seam.persistence</groupId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.Beta1</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
@@ -10,7 +10,7 @@
    <groupId>org.jboss.seam.persistence</groupId>
    <artifactId>seam-persistence-impl</artifactId>
    <packaging>jar</packaging>
-   <version>3.0.0-SNAPSHOT</version>
+   <version>3.0.0.Beta1</version>
    <name>Seam Persistence</name>
 
    <properties>
