--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -16,6 +16,7 @@
 
    <properties>
       <pdf.name>${project.artifactId}.pdf</pdf.name>
+      <weld.docbook.version>1.1.1-Beta5</weld.docbook.version>
    </properties>
 
    <build>
