--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -35,12 +35,7 @@
 
       <dependency>
          <groupId>org.jboss.seam.solder</groupId>
-         <artifactId>seam-solder-api</artifactId>
-      </dependency>
-
-      <dependency>
-         <groupId>org.jboss.seam.solder</groupId>
-         <artifactId>seam-solder-impl</artifactId>
+         <artifactId>seam-solder</artifactId>
       </dependency>
 
       <dependency>
