--- a/pom.xml
+++ b/pom.xml
@@ -88,19 +88,19 @@
          <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
-            <version>1.0-SP2</version>
+            <version>1.0-SP3</version>
          </dependency>
 
          <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-core</artifactId>
-            <version>1.1.0.Beta1</version>
+            <version>1.1.0.Final</version>
          </dependency>
 
          <dependency>
             <groupId>org.jboss.weld.servlet</groupId>
             <artifactId>weld-servlet</artifactId>
-            <version>1.1.0.Beta1</version>
+            <version>1.1.0.Final</version>
          </dependency>
 
       </dependencies>       
