--- a/tests/jetty-openjpa/pom.xml
+++ b/tests/jetty-openjpa/pom.xml
@@ -96,19 +96,8 @@
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.logging</groupId>
-         <artifactId>jboss-logging</artifactId>
-         <scope>test</scope>
-      </dependency>
-
-      <dependency>
          <groupId>org.jboss.seam.solder</groupId>
-         <artifactId>seam-solder-api</artifactId>
-      </dependency>
-
-      <dependency>
-         <groupId>org.jboss.seam.solder</groupId>
-         <artifactId>seam-solder-impl</artifactId>
+         <artifactId>seam-solder</artifactId>
       </dependency>
 
       <dependency>
