--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
    <artifactId>seam-persistence-parent</artifactId>
    <groupId>org.jboss.seam.persistence</groupId>
-   <version>3.0.0.CR1</version>
+   <version>3.0.0-SNAPSHOT</version>
 
    <packaging>pom</packaging>
    <name>Seam Persistence Module</name>
