--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
       <dependencies>
 
          <dependency>
+            <groupId>org.jboss.seam.solder</groupId>
+            <artifactId>seam-solder</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+         </dependency>
+
+         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>seam-bom</artifactId>
             <version>${seam.version}</version>
@@ -65,7 +71,7 @@
             <artifactId>seam-persistence-impl</artifactId>
             <version>${project.version}</version>
          </dependency>
-         
+
          <dependency>
             <groupId>org.jboss.seam.persistence</groupId>
             <artifactId>seam-persistence</artifactId>
@@ -98,8 +104,8 @@
             <version>1.1.0.Final</version>
          </dependency>
 
-      </dependencies>       
-           
+      </dependencies>
+
    </dependencyManagement>
 
    <profiles>
@@ -253,7 +259,7 @@
          <email>stuart.w.douglas@gmail.com</email>
       </developer>
    </developers>
-   
+
    <scm>
       <connection>scm:git:git://github.com/seam/persistence.git</connection>
       <developerConnection>scm:git:git@github.com:seam/persistence.git</developerConnection>
