--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <version>1.1.0.Final</version>
          </dependency>
 
+         <dependency>
+            <groupId>org.jboss.seam.solder</groupId>
+            <artifactId>seam-solder</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+         </dependency>
+
       </dependencies>       
            
    </dependencyManagement>
