--- a/tests/jbossas-hibernate/pom.xml
+++ b/tests/jbossas-hibernate/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
       <artifactId>seam-persistence-parent</artifactId>
       <groupId>org.jboss.seam.persistence</groupId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.CR2</version>
       <relativePath>../../pom.xml</relativePath>
    </parent>
 
@@ -342,10 +341,8 @@
                         </goals>
                         <configuration>
                            <tasks>
-                              <copy file="${env.JBOSS_HOME}/bin/coverage.ec"
-                                    todir="${basedir}"/>
-                              <copy file="${project.parent.build.directory}/../impl/target/coverage.em"
-                                    todir="${basedir}" />
+                              <copy file="${env.JBOSS_HOME}/bin/coverage.ec" todir="${basedir}" />
+                              <copy file="${project.parent.build.directory}/../impl/target/coverage.em" todir="${basedir}" />
                            </tasks>
                         </configuration>
                      </execution>
