--- a/tests/jbossas-hibernate/pom.xml
+++ b/tests/jbossas-hibernate/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <artifactId>seam-persistence-parent</artifactId>
       <groupId>org.jboss.seam.persistence</groupId>
-      <version>3.0.0.Final</version>
+      <version>3.0.1-SNAPSHOT</version>
       <relativePath>../../pom.xml</relativePath>
    </parent>
 
