--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jboss.seam</groupId>
         <artifactId>seam-parent</artifactId>
-        <version>16</version>
+        <version>17-SNAPSHOT</version>
     </parent>
 
     <artifactId>seam-persistence-parent</artifactId>
