--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>seam-persistence-parent</artifactId>
         <groupId>org.jboss.seam.persistence</groupId>
         <version>3.1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>seam-persistence-testsuite</artifactId>
@@ -20,7 +20,6 @@
 
     <properties>
         <eclipse.jetty.version>8.0.0.M3</eclipse.jetty.version>
-        <hibernate.core.version>3.6.0.Final</hibernate.core.version>
         <slf4j.version>1.5.10</slf4j.version>
     </properties>
 
@@ -135,7 +134,6 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-search</artifactId>
-            <version>4.0.0.CR1</version>
             <scope>test</scope>
         </dependency>
 
@@ -356,7 +354,6 @@
                 <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-core</artifactId>
-                    <version>${hibernate.core.version}</version>
                 </dependency>
 
                 <dependency>
@@ -367,7 +364,6 @@
                 <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-entitymanager</artifactId>
-                    <version>${hibernate.core.version}</version>
                 </dependency>
 
             </dependencies>
