--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jboss.seam</groupId>
         <artifactId>seam-parent</artifactId>
-        <version>17-SNAPSHOT</version>
+        <version>17</version>
     </parent>
 
     <artifactId>seam-persistence-parent</artifactId>
@@ -27,7 +27,7 @@
     </modules>
 
     <properties>
-        <seam.version>3.1.0.Beta4</seam.version>
+        <seam.version>3.1.0.Beta5</seam.version>
         <emma.version>2.0.5312</emma.version>
     </properties>
 
