--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>seam-persistence-parent</artifactId>
     <groupId>org.jboss.seam.persistence</groupId>
-    <version>3.1.0-SNAPSHOT</version>
+    <version>3.1.0.Beta5</version>
 
     <packaging>pom</packaging>
     <name>Seam Persistence Module</name>
