--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>seam-persistence-parent</artifactId>
         <groupId>org.jboss.seam.persistence</groupId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
